# multiprocessing_get_hash_server

./: README.md
client/: CMakeLists.txt  a.out  client.c  handle_request.c  handle_request.h  handle_responce.h  handle_response.c  handle_soket.c
client/src/: client.c  handle_responce.h  handle_response.c  handle_soket.h
server/: CMakeLists.txt  a.out  handle_request.c  handle_soket.c  handle_soket.h  multiprocessing.c  multiprocessing.h  server.c
server/src/: handle_hash.c  handle_hash.h  handle_request.c  handle_request.h  multiprocessing.c  multiprocessing.h  server.c
